--- a/.github/workflows/openwrt-builder.yml
+++ b/.github/workflows/openwrt-builder.yml
@@ -122,11 +122,11 @@ jobs:
 
         ⏱️ 编译时间: $(date +"%Y年%m月%d日%H时%M分")
 
-        🌐 管理地址: 192.168.0.2
+        🌐 管理地址: 192.168.5.2
 
         👤 用户名: root
 
-        🔒 密码: password 
+        🔒 密码: 我的密码 
         
         " >> release.txt
         echo "tag_status=success" >> $GITHUB_ENV
